src/main/resources/css/default.scss
/* ... */
/* Headings */

h1 {
    display: block;
    text-align: center;
    margin-left: 4;
    margin-right: 4;
    padding-top: 1;
    -obfl-underline: ⠤;
    margin-bottom: 1;
    page-break-after: avoid;
    hyphens: none;
}

h2 {
    display: block;
    margin-right: 4;
    text-align: left;
    -obfl-underline: ⠒;
    page-break-after: avoid;
    hyphens: none;
}

h3 {
    display: block;
    margin-right: 4;
    text-align: left;
    -obfl-underline: ⠂;
    page-break-after: avoid;
    hyphens: none;
}

h4, h5, h6 {
    display: block;
    margin-right: 4;
    text-align: left;
    page-break-after: avoid;
    hyphens: none;
}

hd, bridgehead {
    display: block;
    margin-right: 4;
    text-align: left;
    margin-top: 1;
    page-break-after: avoid;
    hyphens: none;
}

brl|running-line, brl|toc-line, brl|otherwise {
    display:none;
}

sidebar > hd {
    display: block;
    margin-top:0;
    page-break-after: avoid;
}

/* Divisions */

frontmatter > level1:not(#cover-recto, #cover-verso) {
    display: block;
    page-break-before: right;
}

frontmatter > level1:has(> level2){
    string-set: running-footer-front "Klappentexte";
}

frontmatter > level1.toc {
    display: none;
}


bodymatter > level1:not(:first-child),
rearmatter > level1:not(:first-child) {
    display: block;
    page-break-before:always;
}

/* :not(:first-child) needed to make specificity high enough */
brl|volume + level1:not(:first-child) {
    page-break-before: auto;
}

level1 {
    display: block;
}


level2 {
    display:block;
    margin-top:2;
    orphans:10;
}

level3 {
    display:block;
    margin-top:1;
    orphans:7;
}

level4, level5, level6 {
    display:block;
    margin-top:1;
    orphans:4;
}

bodymatter, rearmatter {
    display: block;
}

frontmatter {
    display: none;
}

frontmatter:has(> *:not(doctitle, docauthor, #cover-recto, #cover-verso)) {
    display: block;
    page: frontmatter;
    flow: frontmatter;
}

frontmatter level2 {
    display: block;
    margin-top:1;
    orphans:4;
}

frontmatter level2:first-child h2 {
    padding-top:1;
}

/* Cover Page */

#cover-recto {
    display: block;
    flow: cover;
    text-align: center;
    page-break-inside:avoid;
    page-break-before: always;
}

#cover-author {
    display: block;
    -obfl-vertical-position:5;
    text-indent: 0;
}

#cover-title {
    display: block;
    margin-top: 2;
    text-indent: 0;
    -obfl-underline: ⠤; /* FIXME: add `text-indent: 0` in order to get rid of the two leading
                           underlined spaces, and also for better centering (similar for
                           p#cover-author, p.series, p.how-many-volumes, etc.) */
}

#number-of-volumes::after {
    content: -obfl-evaluate('(round $volumes)');
    text-transform: volumes;
}

#number-of-volumes-label::after {
    content: -obfl-evaluate('(if (> $volumes 1) "Braillebänden" "Brailleband")');
}

#current-volume::after {
    content: -obfl-evaluate('(round $volume)');
    text-transform: volume;
}

frontmatter > #cover-recto > .series-ppp {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:22;
}

frontmatter > #cover-verso > .series-ppp {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:19;
}

frontmatter > #cover-recto > .series-sjw {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:12;
}

/* FIXME: this block ("In ... Braillebänden") and the next ("Erster Band")
 * should only be displayed when the book has more than 1 volumes.
 * The same applies to "Erster Band" in the TOC */
frontmatter > level1 > .how-many-volumes {
    display: block;
    text-indent: 0;
    margin-top: 4;
}

frontmatter > level1 > .which-volume {
    display: block;
}

frontmatter > #cover-recto > .publisher {
    display: block;
    -obfl-vertical-position:24;
}

#cover-verso {
    display: block;
    flow: cover;
    page-break-before: always;
}

#copyright-blurb {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:1;
}

#sjw-blurb {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:1;
}

#publisher-blurb {
    display: block;
    text-indent: 0;
    -obfl-vertical-position:21;
}

#cover-year {
    display: block;
    text-indent: 0;
    margin-top: 1;
    padding-bottom: 1;
}

frontmatter > .titlepage {
    display: block;
    flow: cover;
}

frontmatter > .titlepage > level2:first-child > p {
    display: block;
    text-align:center;
}

frontmatter > .titlepage > level2:nth-child(2) > p {
    display: block;
    margin-left:2;
    text-indent:-2;
}

.sourcePublisher {
    display: block;
    text-align:center;
    -obfl-vertical-position:26;
    page-break-after:always;
}

frontmatter > .titlepage > level2:first-child::before {
    display: block;
    text-align:center;
    white-space: pre-line;
    margin-top:5;
    margin-bottom:1;
    margin-left:4;
    margin-right:4;
    -obfl-underline: ⠤;
    content: string(docauthor) "\A\A\A" string(doctitle);
}

bodymatter {
    page: bodymatter;
    counter-set: page 1;
}

/* Paragraphs
 *
 * A paragraph is a block element with no special features. */

p {
    display: block;
    text-indent: 2;
}

.precedingemptyline{
    margin-top:1;
}

p.precedingseparator {
    $separator-width: 6;
    text-indent: 0;
    &::before {
        content: "\A"                                            /* empty line */
                 repeat(" ", ($page-width - $separator-width)/2) /* centering */
                 repeat("⠒", $separator-width) "\A"              /* separator */
                 "\A"                                            /* empty line */
                 "  ";                                           /* text indent */
        white-space: pre-line;
        text-transform: none;
        hyphens: initial;
    }
}

.noindent {
    display: block;
    text-indent: 0;
}

pagenum {
    display: none;
    string-set: print-page content(), print-page-slash content() '/';
}
/* ... */

